@@ -14,7 +14,6 @@
 #include <gsl_fft_signals.h>
 #include <gsl_test.h>
 
-#include <getopt.h>
 #include "compare.h"
 
 int verbose = 0;
@@ -23,21 +22,9 @@ void usage (void);
 void my_error_handler (const char *reason, const char *file,
 		       int line, int err);
 
-void
-usage (void)
-{
-  printf("Usage: test_trap [OPTION]\n"
-"Exercise the error handling in the fft routines.\n"
-"\n"
-"  -n, --number=NUM       tests on length n\n"
-"  -v, --verbose          verbosely list tests\n"
-"\n"
-"Without the -v option the test is quiet. The exit status indicates\n"
-"success or failure.\n"
-) ; 
-  exit(0) ;
-}
-
+/* Usage: test_trap
+   Exercise the error handling in the fft routines.
+   The exit status indicates success or failure. */
 
 int
 main (int argc, char * argv[])
@@ -53,39 +40,6 @@ main (int argc, char * argv[])
   gsl_fft_complex_wavetable * cw;
   gsl_fft_real_wavetable * rw;
   gsl_fft_halfcomplex_wavetable * hcw;
-
-
-  while (1) {
-
-    static struct option long_options[] = 
-    {
-      {"verbose", 0, 0, 'v'},
-      {"help", 0, 0, 'h'},
-      {0, 0, 0, 0}
-    } ;
-
-    int option_index = 0 ;
-
-    int c = getopt_long (argc, argv, "hv",
-			 long_options, &option_index) ;
-   
-    if (c == -1)   /* end of options */
-      break ;   
-
-    if (c == 0 && long_options[option_index].flag == 0)
-      c = long_options[option_index].val;
-
-    switch (c) 
-      {
-      case 'v':
-	/* gsl_test_verbose () ; */
-	verbose = 1 ;
-	break ;
-      case 'h':
-      default:
-	usage () ;
-      }
-  }
 
   gsl_set_error_handler (&my_error_handler);
 
