@@ -1,7 +1,7 @@
 #include <config.h>
 #include <gsl_matrix_complex.h>
 
-const static gsl_complex zero = {0, 0} ;
+static const gsl_complex zero = {0, 0} ;
 
 #define BASE gsl_complex
 #define SHORT complex
