@@ -4,7 +4,7 @@
 noinst_LIBRARIES = libutils.a
 
 # Don't need to list alloca.c, etc., Automake includes them.
-libutils_a_SOURCES = getopt.c getopt.h getopt1.c system.h xmalloc.c xstrdup.c
+libutils_a_SOURCES = system.h xmalloc.c xstrdup.c
 libutils_a_LIBADD = @LIBOBJS@ @ALLOCA@
 libutils_a_DEPENDENCIES = $(libutils_a_LIBADD)
 
