@@ -1,3 +1,11 @@
+Wed Jun 10 17:36:01 1998  Brian Gough  <bjg@vvv.lanl.gov>
+
+	* test.c: Eliminated the need for getopt
+
+	* test_radix2.c: Eliminated the need for getopt
+
+	* test_trap.c: Eliminated the need for getopt
+
 Mon Apr 27 18:48:58 1998  Brian Gough  <bjg@vvv.lanl.gov>
 
 	* fft_alloc functions now return a pointer to a newly allocated
